# ai-guard

./: .ai-guard  .gitignore  LICENSE  README.md  install_pre_commit_hook.py  pyproject.toml
ai_guard/: __init__.py  cli.py  core.py  merge_driver.py
ai_guard/parsers/: __init__.py  base.py  gcc.py  python.py  rust.py
tests/: __init__.py  conftest.py  test_cli.py  test_conflict_detection.py  test_file_protection.py  test_gcc_parser.py  test_hash_computation.py  test_hook.py  test_identifier_protection.py  test_integration.py  test_merge_driver.py  test_merge_integration.py  test_parser_interface.py  test_resolve.py  test_rust_parser.py  test_wildcards.py
tests/fixtures/rust/: async_code.rs  generics.rs  lib.rs
